--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,16 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4
+        
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
+
+      - name: Build with Gradle
+        run: ./gradlew build
+
       - name: Cache Gradle Caches
         uses: gradle/gradle-build-action@v2
+        
       - name: Publish to Github Packages
         run: ./gradlew publishAllPublicationsToGithubPackagesRepository
         if: success()
