--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
       - name: Build with Gradle
-        run: gradlew build
+        run: gradle build
 
       - name: Cache Gradle Caches
         uses: gradle/gradle-build-action@v2
