--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
         # You may pin to the exact commit or the version.
         # uses: gradle/wrapper-validation-action@9ba54b687bf0f59b62abbf91e0d60de082e8ebc4
         uses: gradle/wrapper-validation-action@v3.4.1
+
+      - name: add permission
+        run: chmod +x gradlew
           
       - name: Build with Gradle
         run: ./gradlew build
