--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -11,6 +11,9 @@ jobs:
   gradle:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Repo
+        uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4
+        
       - name: Git Version
   # You may pin to the exact commit or the version.
   # uses: codacy/git-version@fa06788276d7492a2af01662649696d249ecf4cb
