--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,8 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "baseBranches": [
+    "chore/renovateBaseBranch"
+  ],
   "extends": [
     "config:recommended",
     ":disableRateLimiting"
