--- a/renovate.json
+++ b/renovate.json
@@ -2,37 +2,23 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:recommended",
+    ":dependencyDashboard",
     ":disableRateLimiting"
   ],
   "packageRules": [
     {
-      "description": "Group together all Jetpack Compose components",
-      "matchPackagePrefixes": [
-        "androidx.compose:",
-        "androidx.compose.animation:",
-        "androidx.compose.foundation:",
-        "androidx.compose.material:",
-        "androidx.compose.material3:",
-        "androidx.compose.runtime:",
-        "androidx.compose.ui:"
-      ],
-      "groupName": "compose-bom"
+      "groupName": "Kotlin, KSP and Compose Multiplatform",
+      "groupSlug": "kotlin",
+      "matchPackageNames": [
+        "com.google.devtools.ksp",
+        "org.jetbrains.kotlin",
+        "org.jetbrains.compose"
+      ]
     },
     {
       "groupName": "Firebase",
       "groupSlug": "firebase",
       "matchPackagePrefixes": ["com.google.firebase"]
-    },
-    {
-      "description": "Configure repository for Google's plugins",
-      "matchDepTypes": ["plugin"],
-      "matchPackagePrefixes": ["androidx.", "com.google."],
-      "registryUrls": ["https://dl.google.com/android/maven2"]
-    },
-    {
-      "description": "Dagger",
-      "matchPackagePrefixes": ["com.google.dagger"],
-      "registryUrls": ["https://repo.maven.apache.org/maven2"]
     }
   ]
 }
