--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -18,8 +18,13 @@ jobs:
   # You may pin to the exact commit or the version.
   # uses: codacy/git-version@fa06788276d7492a2af01662649696d249ecf4cb
         uses: codacy/git-version@2.8.0
-        with:
-    # The name of the release branch
-          release-branch: main
+        
+      - name: Use the version
+        run: |
+          echo ${{ steps.version.outputs.version }}
+      - name: Use the previous version
+        run: |
+          echo ${{ steps.version.outputs.previous-version }}
+          
   
   
